--- a/src/stylesheets/components/_content_container.scss
+++ b/src/stylesheets/components/_content_container.scss
@@ -2,4 +2,7 @@
 	width: 100%;
 	max-width: 1200px;
 	background-color: rgba(255, 255, 255, 1);
+	-webkit-box-shadow: 0 3px 5px -2px rgba(0, 0, 0, 0.6), 0 3px 5px 2px rgba(0, 0, 0, 0.6);
+    -moz-box-shadow: 0 3px 5px -2px rgba(0, 0, 0, 0.6), 0 3px 5px 2px rgba(0, 0, 0, 0.6);
+	box-shadow: 0 3px 5px -2px rgba(0, 0, 0, 0.6), 0 3px 5px 2px rgba(0, 0, 0, 0.6);
 }
