--- a/src/stylesheets/components/_navbar.scss
+++ b/src/stylesheets/components/_navbar.scss
@@ -1,7 +1,17 @@
 .navbar-container {
+	-webkit-box-shadow: 0 3px 5px -2px rgba(0, 0, 0, 0.6);
+    -moz-box-shadow: 0 3px 5px -2px rgba(0, 0, 0, 0.6);
+    box-shadow: 0 3px 5px -2px rgba(0, 0, 0, 0.6);
 	min-width: 100vw;
 	min-height: 60px;
-	border: 1px solid red;
 	position: fixed;
-	background-color: rgba(255, 255, 255,1);
+	background-color: #fff;
+	display: inline-flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.navbar-link {
+	padding: 0 10px;
+	font-size: 1rem;
 }
