--- a/src/stylesheets/pages/_philosophy.scss
+++ b/src/stylesheets/pages/_philosophy.scss
@@ -59,7 +59,7 @@
 }
 
 .philosophy-container-footer {
-	margin: 25px 0 100px 0;
+	padding: 25px 0 100px 0;
 }
 
 .philosophy-container-footer-text {
