--- a/src/stylesheets/pages/_services.scss
+++ b/src/stylesheets/pages/_services.scss
@@ -7,13 +7,12 @@
 }
 
 .service-container {
-	// width: 50%;
-	// padding: 10px 12%;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: space-between;
 	align-items: center;
-	height: 350px;
+	height: 400px;
+	padding: 30px 0;
 }
 
 .service-title {
